--- a/convex/tsconfig.json
+++ b/convex/tsconfig.json
@@ -7,16 +7,16 @@
     /* These settings are not required by Convex and can be modified. */
     "allowJs": true,
     "strict": true,
+    "skipLibCheck": true,
 
     /* These compiler options are required by Convex */
     "target": "ESNext",
-    "lib": ["ES2021", "dom"],
+    "lib": ["ES2021", "dom", "ESNext.Array"],
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "isolatedModules": true,
-    "skipLibCheck": true,
     "noEmit": true
   },
   "include": ["./**/*"],
