--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "googleapis": "^72.0.0",
     "jabber": "^1.5.3",
     "next": "13.4.19",
     "postcss": "8.4.29",
