--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "eslint-config-next": "13.4.19",
     "googleapis": "^72.0.0",
     "jabber": "^1.5.3",
-    "next": "13.4.19",
+    "next": "^14.1.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-day-picker": "^8.9.1",
