--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "convex": "^1.10.0",
     "date-fns": "^2.30.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.1.3",
     "googleapis": "^72.0.0",
     "jabber": "^1.5.3",
     "next": "^14.1.3",
