--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "next": "^14.1.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^5.2.0",
     "react-remove-scroll": "^2.5.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
